merubah MIQ menjadi AR

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="w3-display-container">
               <img src="aset/miq.JPG" style="width: 100%" alt="miq picture" />
               <div class="w3-display-bottomleft w3-container w3-text-black">
-                <h2>Muhammad Iqbal</h2>
+                <h2>Abie Rizki Pratama</h2>
               </div>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Muhammad Iqbal (Code : MIQ)</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Abie Rizki Pratama (Code : MIQ)</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> <a href="https://dte.telkomuniversity.ac.id/" target="_blank">D3 Teknologi Telekomunikasi </a></p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> <a href="https://www.telkomuniversity.ac.id/" target="_blank">Fakultas Ilmu Terapan, Telkom University</a></p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> <a href="https://miqbal.staff.telkomuniversity.ac.id/" target="_blank">Blog : miqbal.staff.telkomuniversity.ac.id</a></p>
